emby/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby-server
  labels:
    app: emby
  namespace: emby
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      volumes:
      - name: emby-music
        persistentVolumeClaim:
          claimName: music
      - name: emby-config
        persistentVolumeClaim:
          claimName: config
      - name: emby-shows
        persistentVolumeClaim:
          claimName: shows
      - name: emby-movies
        persistentVolumeClaim:
          claimName: movies
      - name: emby-audiobooks
        persistentVolumeClaim:
          claimName: audiobooks
      - name: emby-new-movies
        persistentVolumeClaim:
          claimName: new-movies
      - name: emby-new-shows
        persistentVolumeClaim:
          claimName: new-shows
      containers:
        - name: emby
          image: emby/embyserver_arm64v8:4.5.0.20
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
            - name: https
              containerPort: 8920
              protocol: TCP
            - name: someudp
              containerPort: 7359
              protocol: UDP
            - name: someotherudp
              containerPort: 1900
              protocol: UDP
          livenessProbe:
            httpGet:
              path: /
              port: 8096
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /
              port: 8096
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 2
          volumeMounts:
            - name: emby-config
              mountPath: "/config"
            - name: emby-music
              mountPath: "/music"
            - name: emby-shows
              mountPath: "/shows"
            - name: emby-movies
              mountPath: "/movies"
            - name: emby-audiobooks
              mountPath: "/audiobooks"
            - name: emby-new-movies
              mountPath: "/new_movies"
            - name: emby-new-shows
              mountPath: "/new_shows"
          resources:
            requests:
              memory: 2Gi
              cpu: 1
            limits:
              memory: 3Gi
              cpu: 1.5
