emby/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby-server
  namespace: emby
  labels:
    app: emby
spec:
  type: LoadBalancer
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
  selector:
    app: emby
