emby/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: emby-ingress
  namespace: emby
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Encrypt using the ClusterIssuer deployed while setting up Cert-Manager
    nginx.ingress.kubernetes.io/proxy-body-size:  "50m" # Increase the size of the maximum allowed size of the client request body
spec:
  tls:
  - hosts:
    - emby.DOMAIN_TEMPLATE
    secretName: emby-prod-tls
  rules:
    - host: emby.DOMAIN_TEMPLATE
      http:
        paths:
          - path: /
            backend:
              serviceName: emby-server
              servicePort: 8096
